tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/parenthesized-optionalexpression.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/optionalexpression.case
// - src/assignment-target-type/invalid/parenthesized.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
features: [optional-chaining]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.

    OptionalExpression
    Static Semantics AssignmentTargetType, Return invalid.

---*/

$DONOTEVALUATE();

(x?.y) = 1;
